--- a/index.html
+++ b/index.html
@@ -230,8 +230,18 @@ function guardarProductos() {
 
 // Load products array from localStorage
 function cargarProductos() {
-    const data = localStorage.getItem("productos");
-    productos = data ? JSON.parse(data) : [];
+    let guardados = JSON.parse(localStorage.getItem("productos") || "[]");
+
+    // Agregar campo 'codigo' a cada producto si no existe
+    guardados.forEach(prod => {
+        if (!prod.codigo) {
+            prod.codigo = prompt(`Ingrese el código de barras para: ${prod.nombre}`);
+        }
+    });
+
+    productos = guardados;
+    guardarProductos(); // guardamos de nuevo con el código
+    renderizarTabla();
 }
 
 // Render table from productos[]
@@ -279,22 +289,23 @@ function guardarTasa() {
 
 // Add product
 function agregarProducto() {
-    const nombreEl = document.getElementById("nombre");
-    const precioEl = document.getElementById("precio");
-    const nombre = nombreEl.value.trim();
-    const precioUSD = parseFloat(precioEl.value);
+    let nombre = document.getElementById("nombre").value.trim();
+    let precioUSD = parseFloat(document.getElementById("precio").value);
 
     if (!nombre || isNaN(precioUSD)) {
         alert("Ingresa nombre y precio correcto");
         return;
     }
 
-    productos.push({ nombre: nombre, usd: precioUSD, cant: 1 });
+    // Pedir código al agregar producto
+    let codigo = prompt("Ingrese el código de barras para: " + nombre);
+
+    productos.push({ nombre: nombre, usd: precioUSD, cant: 1, codigo: codigo });
     guardarProductos();
     renderizarTabla();
 
-    nombreEl.value = "";
-    precioEl.value = "";
+    document.getElementById("nombre").value = "";
+    document.getElementById("precio").value = "";
 }
 
 // Delete
