--- a/index.html
+++ b/index.html
@@ -645,8 +645,7 @@ function onDetectarCodigo(result) {
         });
 
         const fila = document.querySelectorAll("#tabla tbody tr")[index];
-        fila.classList.add("encontrado", "seleccionado");
-
+        fila.classList.add("encontrado");
         fila.scrollIntoView({
             behavior: "smooth",
             block: "center"
